Actualización en el archivo index.html

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <img src="react.jpg" alt="Proyecto 3">
                     <div class="proyecto-info">
                         <h3>Sistema Wed de Registro de datos de Tienda la Economica Reaizado en React, HTML y CSS</h3>
-                        <a href="https://github.com/tu-repo3" target="_blank">Ver en GitHub</a>
+                        <a href="https://github.com/YersonSandovalRivas11/Tiendareact" target="_blank">Ver en GitHub</a>
                     </div>
                 </div>
             </div>
