Actualización en el archivo index.html

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <img src="pacman.jpg" alt="Proyecto 2">
                     <div class="proyecto-info">
                         <h3>Pac-Man en JS con HTML y CSS</h3>
-                        <a href="https://github.com/tu-repo2" target="_blank">Ver en GitHub</a>
+                        <a href="https://github.com/YersonSandovalRivas11/pacmanproyect" target="_blank">Ver en GitHub</a>
                     </div>
                 </div>
             </div>
@@ -197,7 +197,7 @@
                     <img src="movil.jpg" alt="Proyecto 1">
                     <div class="proyecto-info">
                         <h3>Aplicacion Movil de un inico de sesion para el alberge AdoptaPaws contrudido en Android Stuido y Kotlin!</h3>
-                        <a href="https://github.com/YersonSandovalRivas11/mi-primera_calculadora" target="_blank">Ver en GitHub</a>
+                        <a href="https://github.com/YersonSandovalRivas11/mi-primera_calculadora" target="_blank"></a>
                     </div>
                 </div>
             </div>
@@ -206,7 +206,7 @@
                     <img src="movil2.jpg" alt="Proyecto 2">
                     <div class="proyecto-info">
                         <h3>Formulario Movil Para saber los Datos de un programador Realizado en ¡Android Stuido y Kotlin!</h3>
-                        <a href="https://github.com/tu-repo2" target="_blank">Ver en GitHub</a>
+                        <a href="https://github.com/tu-repo2" target="_blank"></a>
                     </div>
                 </div>
             </div>
@@ -215,7 +215,7 @@
                     <img src="movil3.jpg" alt="Proyecto 3">
                     <div class="proyecto-info">
                         <h3>Aplicacion Movil de un inico de sesion para Minimarkert Luz contrudido en Android Stuido y Kotlin!</h3>
-                        <a href="https://github.com/tu-repo3" target="_blank">Ver en GitHub</a>
+                        <a href="https://github.com/tu-repo3" target="_blank"></a>
                     </div>
                 </div>
             </div>
@@ -225,7 +225,7 @@
                     <img src="angu1.jpg" alt="Proyecto 1">
                     <div class="proyecto-info">
                         <h3>Proyecto en Angular de Una pagina Wed de un Hospital, Utilizando Apis formularios de registro, ETC</h3>
-                        <a href="https://github.com/YersonSandovalRivas11/mi-primera_calculadora" target="_blank">Ver en GitHub</a>
+                        <a href="https://github.com/YersonSandovalRivas11/saludproyect" target="_blank">Ver en GitHub</a>
                     </div>
                 </div>
             </div>
@@ -234,7 +234,7 @@
                     <img src="angu2.jpg" alt="Proyecto 2">
                     <div class="proyecto-info">
                         <h3>Portafolio Personal realizado en Angular con html. CSS</h3>
-                        <a href="https://github.com/tu-repo2" target="_blank">Ver en GitHub</a>
+                        <a href="https://github.com/YersonSandovalRivas11/portafolioproyect" target="_blank">Ver en GitHub</a>
                     </div>
                 </div>
             </div>
